CPG-DEV/src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>PricingGuidanceFloorPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Price Guidance Floor Price</description>
        <inlineHelpText>Price Guidance Floor Price</inlineHelpText>
        <label>Pricing Guidance: Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingGuidanceStartPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pricing Guidance Start Price</description>
        <inlineHelpText>Pricing Guidance Start Price</inlineHelpText>
        <label>Pricing Guidance: Start Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingGuidanceTargetPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Pricing Guidance Target Price</description>
        <inlineHelpText>Pricing Guidance Target Price</inlineHelpText>
        <label>Pricing Guidance: Target Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>